# CMakeTutorialCN

./: README.md
Practice/: CMakeLists.txt
Practice/include/src/polynomial/: polynomial.h
Practice/include/src/pow/: pow.h
Practice/include/utils/: math_utils.h
Practice/src/: CMakeLists.txt  main.cpp
Practice/src/polynomial/: CMakeLists.txt  polynomial.cpp
Practice/src/pow/: CMakeLists.txt  pow.cpp
Practice/utils/: CMakeLists.txt
Practice/utils/src/: math_utils.cpp
tutorial/Step1/: README.md
tutorial/Step1/Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
tutorial/Step1/Step1_build/: CMakeCache.txt  Makefile  TutorialConfig.h  cmake_install.cmake
tutorial/Step10/: CMakeLists.txt  README.md
tutorial/Step10/MathFunctions/: CMakeLists.txt
tutorial/Step11/: CMakeLists.txt  tem.txt
tutorial/Step11/MathFunctions/: CMakeLists.txt
tutorial/Step12/: CMakeLists.txt  MultiConfig.cmake  README.md  Tutorial-1.0-Linux.sh  Tutorial-1.0-Linux.tar.Z
tutorial/Step12/MathFunctions/: CMakeLists.txt
tutorial/Step12/_CPack_Packages/Linux/STGZ/: Tutorial-1.0-Linux.sh
tutorial/Step12/_CPack_Packages/Linux/STGZ/Tutorial-1.0-Linux/lib/: libMathFunctionsd.so.1.0.0
tutorial/Step12/_CPack_Packages/Linux/TZ/Tutorial-1.0-Linux/lib/cmake/MathFunctions/: MathFunctionsTargets-release.cmake  MathFunctionsTargets.cmake
tutorial/Step12/debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  MakeTable  Makefile  MathFunctionsTargets.cmake  Tutoriald  cmake_install.cmake  install_manifest.txt  libMathFunctionsd.so.1.0.0
tutorial/Step12/debug/MathFunctions/: Makefile  cmake_install.cmake
tutorial/Step12/release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  MathFunctionsTargets.cmake  Tutorial  cmake_install.cmake  install_manifest.txt
tutorial/Step12/release/MathFunctions/: Makefile  cmake_install.cmake
tutorial/Step2/: README.md
tutorial/Step2/Step2_build/: CMakeCache.txt  Makefile  cmake_install.cmake
tutorial/Step2/Step2_build/MathFunctions/: Makefile  cmake_install.cmake
tutorial/Step3/: README.md
tutorial/Step3/Step3/: CMakeLists.txt
tutorial/Step3/Step3_build/: CMakeCache.txt  Makefile  cmake_install.cmake
tutorial/Step3/Step3_build/MathFunctions/: Makefile  cmake_install.cmake
tutorial/Step3_build/: CMakeCache.txt  cmake_install.cmake
tutorial/Step4/: CMakeLists.txt  README.md
tutorial/Step4/MathFunctions/: Makefile  cmake_install.cmake
tutorial/Step5/: README.md
tutorial/Step5/Step5/MathFunctions/: CMakeLists.txt
tutorial/Step6/: CMakeCache.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
tutorial/Step6/MathFunctions/: Makefile  cmake_install.cmake  mysqrt.cxx
tutorial/Step7/: CMakeLists.txt  README.md
tutorial/Step8/: CMakeLists.txt  CTestConfig.cmake
tutorial/Step9/: CMakeLists.txt  README.md
tutorial/Step9/MathFunctions/: CMakeLists.txt
